Fix data grid for viewer